# django-async-test

./: README.md  load_test.py  manage.py  pyproject.toml
app/: models.py  views.py
app/migrations/: 0001_initial.py
django_async_test/: asgi.py  settings.py  urls.py  wsgi.py
