[tool.poetry]
name = "django-async-test"
version = "0.1.0"
description = ""
authors = ["James Thorniley <james.thorniley@mixcloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.2.5"
daphne = "^4.0.0"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"
mysqlclient = "^2.2.0"
httpx = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
